# framely-releases

./: .gitignore  README.md  build.ps1  index.html  package-lock.json  package.json  patch-icon.ps1  vite.config.js
.github/workflows/: release.yml
backend/: generate-keys.js  license-functions.js
src/: App.jsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsh
src-tauri/src/: main.rs
src/lib/: license.js
src/pages/: ActivationScreen.jsx  Dashboard.jsx
supabase/.temp/: pooler-url  project-ref
supabase/functions/activate/: index.ts
supabase/functions/validate/: index.ts
